[feature] add getAll, getById, updateById, and deleteById land